# fastapi-tutorial

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  pylint.yml  test.yml
app/: __main__.py  auth.py  database.py  dependencies.py  main.py  models.py  settings.py
app/routers/: __init__.py  auth.py  commons.py  items.py  users.py
app/schemas/: __init__.py  commom.py  item.py  user.py
app/services/: __init__.py  base.py  items.py  user.py
cli/: README.md  auth.py  commons.py  db.py  format.py  main.py  source.py  utils.py
tests/: test_cli.py  test_routes.py  test_services.py
