[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Jonatas Leon <j@jonatasleon.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.75.2"
SQLAlchemy = "^1.4.36"
uvicorn = "^0.17.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.7"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipython = "^8.3.0"
ipykernel = "^6.13.0"

[tool.poetry.scripts]
py_start = "app:__main__"
cli = "cli:__main__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"